add admin seed file
