# src/modules/favorites/dto/add-favorite-to-cart.dto.ts
@@ -1,0 +1,8 @@
+import { IsInt, Max, Min } from 'class-validator';
+
+export class AddFavoriteToCartDto {
+  @IsInt()
+  @Min(1)
+  @Max(50)
+  quantity: number = 1;
+}
